--- a/style.css
+++ b/style.css
@@ -134,59 +134,6 @@ summary::-webkit-details-marker {
   display: none;
 }
 
-.burger-menu__nav {
-  width: 232px;
-  position: absolute;
-  z-index: 20;
-  background-color: white;
-  padding: 37px 33px 33px;
-  top: 75px;
-}
-.burger-menu__title {
-  color: #000;
-  font-size: 14px;
-  font-weight: 700;
-  margin-bottom: 24px;
-}
-.burger-menu__item {
-  margin-top: 12px;
-}
-.burger-menu__item__summary {
-  display: flex;
-  align-items: center;
-  gap: 11px;
-  padding-left: 16px;
-}
-.burger-menu__item[open] .burger-menu__item__head {
-  color: #F16D7F;
-}
-.burger-menu[open] {
-  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
-}
-.burger-menu__head {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  color: #6f6e6e;
-  padding: 8px 11px 11px 11px;
-  border-bottom: 1px solid #EBEBEB;
-  border-left: 5px solid #F16D7F;
-}
-.burger-menu__link-box {
-  display: flex;
-  flex-direction: column;
-  gap: 11px;
-  padding: 12px 12px 20px 40px;
-}
-.burger-menu__link {
-  color: #6F6E6E;
-  font-size: 14px;
-  font-weight: 400;
-}
-.burger-menu__link:hover {
-  color: #F16D7F;
-}
-
 .filter-sort {
   height: 132px;
   padding-top: 39px;
@@ -346,6 +293,151 @@ summary::-webkit-details-marker {
   fill: #F16D7F;
 }
 
+.main-cart {
+  padding-top: 96px;
+  padding-bottom: 128px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 11%;
+  /*left*/
+  /*right*/
+}
+.main-cart__left {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.main-cart__product {
+  display: flex;
+  flex-direction: row;
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+}
+.main-cart__product_img {
+  max-width: 262px;
+}
+.main-cart__product_info {
+  padding: 22px 31px 62px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.main-cart__product_title {
+  color: #000;
+  font-family: "Lato";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 42px;
+  max-width: 262px;
+}
+.main-cart__product_text {
+  color: #5D5D5D;
+  font-family: "Lato";
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.main-cart__product_text_price::after {
+  content: "300$";
+  color: #F16D7F;
+  padding-left: 10px;
+}
+.main-cart__product_text_color::after {
+  content: "Red";
+  padding-left: 10px;
+}
+.main-cart__product_text_size::after {
+  content: "XL";
+  padding-left: 10px;
+}
+.main-cart__product_text_quantity::after {
+  content: "2";
+  padding-left: 10px;
+}
+.main-cart__buttons {
+  display: flex;
+  justify-content: space-between;
+}
+.main-cart__buttons_link {
+  color: #000;
+  font-family: "Lato";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  padding: 17px 40px;
+  border: 1px solid #A4A4A4;
+}
+.main-cart__buttons_link:hover {
+  color: #F16D7F;
+  border: 1px solid #F16D7F;
+}
+.main-cart__final-box {
+  background-color: #F1E4E6;
+  padding: 42px 34px;
+}
+.main-cart__form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 57px;
+  margin-top: 17px;
+}
+.main-cart__final {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 12px;
+  padding-bottom: 17px;
+}
+.main-cart__final_subtitle {
+  color: #5D5D5D;
+  font-family: "Lato";
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.main-cart__final_subtitle::after {
+  content: "$900";
+  padding-left: 70px;
+}
+.main-cart__final_title {
+  color: #222;
+  font-family: "Lato";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  padding-bottom: 21px;
+}
+.main-cart__final_title::after {
+  content: "$900";
+  color: #F16D7F;
+  font-weight: 700;
+  padding-left: 70px;
+}
+.main-cart__button {
+  color: #FFF;
+  font-family: "Lato";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  padding: 17px 40px;
+  border: 1px solid transparent;
+  background-color: #F16D7F;
+}
+.main-cart__button:hover {
+  color: #F16D7F;
+  border: 1px solid #F16D7F;
+  background-color: #FFF;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -389,6 +481,59 @@ body {
   display: flex;
   gap: 25px;
   align-items: flex-end;
+}
+
+.burger-menu__nav {
+  width: 232px;
+  position: absolute;
+  z-index: 20;
+  background-color: white;
+  padding: 37px 33px 33px;
+  top: 75px;
+}
+.burger-menu__title {
+  color: #000;
+  font-size: 14px;
+  font-weight: 700;
+  margin-bottom: 24px;
+}
+.burger-menu__item {
+  margin-top: 12px;
+}
+.burger-menu__item__summary {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+  padding-left: 16px;
+}
+.burger-menu__item[open] .burger-menu__item__head {
+  color: #F16D7F;
+}
+.burger-menu[open] {
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+}
+.burger-menu__head {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #6f6e6e;
+  padding: 8px 11px 11px 11px;
+  border-bottom: 1px solid #EBEBEB;
+  border-left: 5px solid #F16D7F;
+}
+.burger-menu__link-box {
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+  padding: 12px 12px 20px 40px;
+}
+.burger-menu__link {
+  color: #6F6E6E;
+  font-size: 14px;
+  font-weight: 400;
+}
+.burger-menu__link:hover {
+  color: #F16D7F;
 }
 
 /* Main */
