--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'product';
 @import 'catalog';
+@import 'cart';
 
 * {
     margin: 0;
@@ -47,6 +48,73 @@ body {
         display: flex;
         gap: 25px;
         align-items: flex-end;
+    }
+}
+
+.burger-menu {
+
+    &__nav {
+        width: 232px;
+        position: absolute;
+        z-index: 20;
+        background-color: #ffff;
+        padding: 37px 33px 33px;
+        top: 75px;
+    }
+
+    &__title {
+        color: #000;
+        font-size: 14px;
+        font-weight: 700;
+        margin-bottom: 24px;
+    }
+
+    &__item {
+        margin-top: 12px;
+
+        &__summary {
+            display: flex;
+            align-items: center;
+            gap: 11px;
+            padding-left: 16px;
+
+        }
+    }
+
+    &__item[open] .burger-menu__item__head {
+        color: $colorSelectSite;
+    }
+
+    &[open] {
+        box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+    }
+
+    &__head {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #6f6e6e;
+        padding: 8px 11px 11px 11px;
+        border-bottom: 1px solid #EBEBEB;
+        border-left: 5px solid $colorSelectSite;
+
+    }
+
+    &__link-box {
+        display: flex;
+        flex-direction: column;
+        gap: 11px;
+        padding: 12px 12px 20px 40px;
+    }
+
+    &__link {
+        color: #6F6E6E;
+        font-size: 14px;
+        font-weight: 400;
+
+        &:hover {
+            color: $colorSelectSite;
+        }
     }
 }
 
