--- a/_cart.scss
+++ b/_cart.scss
@@ -111,6 +111,36 @@
         gap: 20px;
         margin-bottom: 57px;
         margin-top: 17px;
+
+        &_title {
+            color: #222;
+            font-size: 16px;
+            font-weight: 300;
+        }
+
+        &_input {
+            width: 359px;
+            height: 44px;
+            color: #222;
+            font-size: 13px;
+            font-weight: 300;
+
+            &[type=text] {
+                padding: 17px;
+                color: #B1B1B1;
+                font-size: 13px;
+                font-weight: 300;
+            }
+        }
+
+        &_submit {
+            width: 101.408px;
+            height: 35px;
+            color: #4A4A4A;
+            font-size: 11px;
+            font-weight: 300;
+        }
+
     }
 
 
